# NeonArmyCore

./: .gitignore  .pre-commit-config.yaml  bot_config_example.toml  pyproject.toml
src/neonarmycore/: bot.py  main.py
src/neonarmycore/cogs/: general.py
src/neonarmycore/utils/: config_utils.py
